solucionado error de posiciones
se corrigio las matematicas de BoxPiese